--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -2,7 +2,7 @@
 \input{Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex}
 
 
-\section{Erwartungen an autonome Fahrzeuge}
+\section{Erwartungen an autonome FahrzKraftfahrzeuge}
 2019 haben das
 Bundesministerium für Bildung und Forschung (BMBF) zusammen mit dem
 Bundesministerium für Wirtschaft und Energie (BMWi) und dem
@@ -33,11 +33,11 @@ Grundsätzlich werden Klimaeffekte abhängig von:
 	\item der Nachfrage von Nutzern
 \end{itemize}
 
-Im direkten Vergleich von autonomen Fahrzeugen zu konventionellen Fahrzeugen
+Im direkten Vergleich von autonomen Kraftfahrzeugen zu konventionellen Kraftfahrzeugen
 fällt ein geringer Kraftstoffverbrauch und ein geringerer Ausstoß von Feinstaub auf.
 
 Andere Faktoren können die Umwelt entlasten wie der Abbau von Fahrzeugbeständen,
-und die dadurch wegfallenden negativen Einflüsse durch die Produktion von Fahrzeugen.
+und die dadurch wegfallenden negativen Einflüsse durch die Produktion von Kraftfahrzeugen.
 
 \subsection{Kraftstoffeinsparungen}
 Kraftstoffeinsparungen durch autonomes Fahren im Straßenverkehr können sich durch
@@ -47,7 +47,7 @@ einer abgestimmten Fahrweise bei einer optimalen Routenführung ergeben.
 Erste Wirkungen können sich bereits im Mischverkehr aus autonom und konventionell gesteuerten Kraftfahrzeugen bemerkbar machen durch weniger
 Brems- und Beschleunigungsvorgängen.
 
-Die Wirkungen könnten sich mit einer steigenden Marktdurchdringung von autonomen Fahrzeugen
+Die Wirkungen könnten sich mit einer steigenden Marktdurchdringung von autonomen Kraftfahrzeugen
 durch sinkenden stockenden Verkehr sowie eine Reduzierung von Staus bemerkbar machen.
 
 \subsubsection{Kraftstoffeinsparungen auf Autobahnen}
@@ -58,7 +58,7 @@ der Automatisierungsstufe 3 auf Autobahnen begutachtet.
 
 Die Wirkung wurde für zwei verschiedene Szenarien ausgewiesen.
 Das erste Szenario basiert darauf dass alle Kraftfahrzeuge autonom fahren.
-Im zweiten Szenario betrug der Anteil ungefähr 45.000 autonome Fahrzeuge.
+Im zweiten Szenario betrug der Anteil ungefähr 45.000 autonome Kraftfahrzeuge.
 
 Auf der Basis von einer 10-20 prozentigen Reduzierung des Kraftstoffverbrauchs ergab sich
 im ersten Szenario ein jährliches Sparpotential zwischen 360 und 720 Millionen Euro und
@@ -68,7 +68,7 @@ Rechnet man diese Werte auf einzelne autonome Kraftfahrzeuge um,
 ergäbe dies eine Einsparung für jedes autonome Kraftfahrzeug von 8 bis 16 € pro Jahr.
 \cite{Fraunhofer}
 
-Eine weitere Einsparung auf Autobahnen durch autonome Fahrzeuge könnte mit
+Eine weitere Einsparung auf Autobahnen durch autonome Kraftfahrzeugen könnte mit
 dem systembedingten verzicht der Überschreitung von Fahrgeschwindigkeiten über der Richtgeschwindigkeit.
 Der Verzicht von höheren Geschwindigkeiten auf Autobahnen kann zu enormen Einsparungen im Kraftstoffverbrauch führen,
 da mit steigender Geschwindigkeit der Kraftstoffverbrauch überproportional rasant ansteigt.
@@ -94,17 +94,17 @@ Diese Abschätzungen basieren auf Simulations- und Modellrechnungen.
 Die Menge der  Kraftstoffeinsparungen hängt unter anderem von mehreren Faktoren ab:
 \begin{itemize}
 	\item die verwendete Automatisierungsstufe
-	\item der Marktanteil von autonomen Fahrzeugen
-	\item die Vernetzung zwischen den Fahrzeugen
-	\item die Vernetzung zwischen den Fahrzeugen und der Infrastruktur
+	\item der Marktanteil von autonomen Kraftfahrzeugen
+	\item die Vernetzung zwischen den Kraftfahrzeugen
+	\item die Vernetzung zwischen den Kraftfahrzeugen und der Infrastruktur
 \end{itemize}
 
 \subsection{Potential bei Flottenfahrzeugen}
-Wenn autonome Fahrzeuge in einer Flotte betrieben werden, wäre auch eine intensivere Nutzung der autonomen Fahrzeuge zu erwarten,
+Wenn autonome Kraftfahrzeuge in einer Flotte betrieben werden, wäre auch eine intensivere Nutzung der autonomen Kraftfahrzeugen zu erwarten,
 wodurch sich der Nutzungszeitraum verkürzen würde.
 Dies würde dazu führen dass Flottenfahrzeuge früher ausgetauscht und erneuert werden müssen.
 
-Durch den schnellen Austausch der Flottenfahrzeuge durch modernere Fahrzeuge mit technologischer Erneuerung,
+Durch den schnellen Austausch der Flottenfahrzeuge durch modernere Kraftfahrzeuge mit technologischer Erneuerung,
 die weniger Luftschadstoffe und Emissionen produzieren, könnte zu einer Reduktion von verkehrsbedingen Luftschadstoffen und Emissionen führen.
 
 \subsection{Positive Umwelteinwirkung durch die Reduktion von Kraftfahrerzeugen}
@@ -115,9 +115,9 @@ Mobilitätsdienstleister mit autonomen Taxen können
 Kunden abholen und zu Zielort bringen,
 und vermindern die Notwendigkeit zum Kauf eines Fahrzeugs.
 
-Verschiedene Studien haben in verschiedenen Szenarien berechnet, ob und wie viele Kraftfahrzeuge sich durch autonome Fahrzeuge zusammenfassen ließen.
+Verschiedene Studien haben in verschiedenen Szenarien berechnet, ob und wie viele Kraftfahrzeuge sich durch autonome Kraftfahrzeuge zusammenfassen ließen.
 Eine Studie kam zu dem Resultat, dass in etwa 18.000 Flottenfahrzeuge den kompletten Individualverkehr von München innerhalb eines Einzuggebietes decken könnte.
-Dadurch könnte auf ungefähr 200 Tausend Fahrzeuge verzichtet werden.
+Dadurch könnte auf ungefähr 200 Tausend Kraftfahrzeuge verzichtet werden.
 \cite{infrastrukturen}
 \newpage
 
@@ -130,6 +130,6 @@ Autonomes Fahren alleine kann die negativen Auswirkungen von Kraftfahrerzeugen a
 Viel mehr kann ein Verbund neuer Technologien und Verhaltensmuster die negative Auswirkungen reduzieren.
 
 \subsection{Verifikation der Hypothese}
-Bei der Verifikation der Hypothese \textit{''Je mehr Fahrzeuge
+Bei der Verifikation der Hypothese \textit{''Je mehr Kraftfahrzeuge
 	autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus''}
 fällt auf, dass diese aufgrund von fehlender Datenlage und Langzeitstudien nicht verifiziert werden kann.
