--- a/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
@@ -1,4 +1,4 @@
-\subsection{Autonomes Fahren}
+\subsection{Autonomes Kraftfahrzeuge}
 Beim autonomen Fahren, fährt ein Kraftfahrzeug Verwaltungsgemäß selbständig.
 Für Kraftfahrzeuge wurden von der \ac{SAE} Automatisierungsgrade definiert\cite{PRACTICE}.
 \begin{itemize}
@@ -76,14 +76,14 @@ In der Stufe 5 (Vollautomatisierung):
 	\item alle Personen im Wagen werden zu Passagieren
 \end{itemize}
 
-\subsection{Autonome Kraftfahrzeuge}
-Autonome Kraftfahrzeuge sind Fahrzeuge die nicht nur automatisch fahren sondern von einem System gesteuert werden.
-Somit sind diese Fahrzeuge aus Sicht der Nutzenden autonom.
 
-Während manche in der Verbreitung autonomer Fahrzeuge die Lösung vieler Probleme sehen können,
+Autonome Kraftfahrzeuge sind Kraftfahrzeuge die nicht nur automatisch fahren sondern von einem System gesteuert werden.
+Somit sind diese Kraftfahrzeuge aus Sicht der Nutzenden autonom.
+
+Während manche in der Verbreitung autonomer Kraftfahrzeuge die Lösung vieler Probleme sehen können,
 vermuten andere eine Verschlechterung der Verkehrs- und Umweltlage.
 
-Die Bedeutung von autonomen Fahrzeugen hängt sowohl von der technischen Komplexität als auch von den politischen Regulierung ab.
+Die Bedeutung von autonomen Kraftfahrzeugen hängt sowohl von der technischen Komplexität als auch von den politischen Regulierung ab.
 
 In welchem Maß das Level 5 System im Straßenverkehr teilnimmt entscheidet vorerst der gesetzliche Rahmen.
 Dies ist wiederum abhängig wie der zukünftige Verkehr aussehen soll.
