--- a/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
@@ -8,7 +8,7 @@ Die EU Kommission hat hierfür acht Klassen definiert\cite{VERORDNUNG}:
 	\item Klasse M: Vorwiegend für die Beförderung von Fahrgästen und deren Gepäck ausgelegte und gebaute Kraftfahrzeuge
 	\item Klasse N: Vorwiegend für die Beförderung von Gütern ausgelegte und gebaute Kraftfahrzeuge
 	\item Klasse O: Anhänger, die sowohl für die Beförderung von Gütern und Fahrgästen als auch für die Unterbringung von Personen ausgelegt und gebaut sind
-	\item Klasse S: unvollständige Fahrzeuge, die der Unterklasse der Fahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll
+	\item Klasse S: unvollständige Kraftfahrzeuge, die der Unterklasse der Kraftfahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll
 	\item Klasse R: Anhänger, die in der Land- und Forstwirtschaft verwendet werden
 	\item Klasse S: Maschinen, die in der Land- und Forstwirtschaft zum Einsatz kommen und gezogen werden
 	\item Klasse T: Zugmaschinen, die in der Land- und Forstwirtschaft verwendet werden wie Traktoren
@@ -67,21 +67,21 @@ Die Klasse N spaltet sich in 3 Unterklassen auf:
 \end{itemize}
 
 \subsubsection{Klasse N1}
-Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse bis zu 3,5 \ac{t}.
-In der Klasse N1 sind Kraftfahrzeuge die in dicht besiedelten Regionen gut zurecht kommen, wie Paketzusteller oder Fahrzeuge der Post.
+Kraftfahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse bis zu 3,5 \ac{t}.
+In der Klasse N1 sind Kraftfahrzeuge die in dicht besiedelten Regionen gut zurecht kommen, wie Paketzusteller oder Kraftfahrzeuge der Post.
 
 
 \subsubsection{Klasse N2}
-Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von 3,5 \ac{t} bis 12 \ac{t}.
+Kraftfahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von 3,5 \ac{t} bis 12 \ac{t}.
 In der Klasse N2 sind Kraftfahrzeuge die Regionalgüter befördern.
 
 Diese Kraftfahrerzeuge können die Waren aus einem Zentrallager in die Filialen transportieren
 und sind darauf ausgelegt hunderte Kilometer zurück legen zu können.
 
 \subsubsection{Klasse N3}
-Dazu gehören Fahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von mehr als 12 \ac{t}.
+Dazu gehören Kraftfahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von mehr als 12 \ac{t}.
 In der Klasse N3 sind Kraftfahrzeuge die überregionale Güter befördern.
 
-Diese Kraftfahrerzeuge können ein vielfaches der Ladung als Fahrzeuge der Klasse N2 aufnehmen
+Diese Kraftfahrerzeuge können ein vielfaches der Ladung als Kraftfahrzeuge der Klasse N2 aufnehmen
 und sind darauf ausgelegt tausende Kilometer zurück zulegen.
 
