--- a/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Bedingungen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Bedingungen.tex
@@ -10,6 +10,6 @@ Die Umweltbelastung durch Luftschadstoffe hängt ab von:
 	\item dem Gewicht des Fahrzeugs, je leichter desto weniger Gewicht muss beschleunigt und gebremst werden
 	\item der Fahrstrecke, fährt das Fahrzeug eine Steigung wird mehr Kraftstoff benötigt
 	\item dem Wetter, je nach Wind wird mehr oder weniger Kraftstoff benötigt
-	\item dem Betriebszustand des Fahrzeuges (wenn sich das Fahrzeug nicht im Betriebszustand befindet wird Energie verwendet um den Betriebszustand zu erreichen)
+	\item dem Betriebszustand des Kraftfahrzeuges (wenn sich das Fahrzeug nicht im Betriebszustand befindet wird Energie verwendet um den Betriebszustand zu erreichen)
 \end{itemize}
 
