--- a/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
@@ -54,7 +54,7 @@ Feinstaub durch menschliches Handeln entsteht durch:
 \end{itemize}
 
 Einrichtungen der Umweltzonen und Festlegung von Fahrverboten durch die Kommunen und Städte können zur Verbesserung der Luftreinhaltung führen.
-Das befahren einer Umweltzone ist dann nur mit einer entsprechenden Kennzeichnung des Fahrzeuges möglich, die man bei der zuständigen Behörde erlangen kann.
+Das befahren einer Umweltzone ist dann nur mit einer entsprechenden Kennzeichnung des Kraftfahrzeuges möglich, die man bei der zuständigen Behörde erlangen kann.
 
 
 
