--- a/template/Fallstudie/Schluss/Schluss.tex
+++ b/template/Fallstudie/Schluss/Schluss.tex
@@ -22,7 +22,7 @@ können Potentiale im Bereich der Kraftstoffeinsparung und der stetigen Modernis
 
 Neben den Luftschadstoffen ist auch Feinstaub eine negative Belastung.
 Da Feinstaub nicht nur durch die Verbrennung von fossilen Kraftstoffen entsteht,
-sondern auch durch den Abrieb der Reifen und Bremsen und Produktion von Fahrzeugen,
+sondern auch durch den Abrieb der Reifen und Bremsen und Produktion von Kraftfahrzeugen,
 ergeben sich hier Einspareffekte bei der Reduzierung von Fahrten und der Reduktion von Fahrzeugbeständen.
 
 Aufgrund der hohen Aktualität kann ein eindeutiger Trend noch nicht abgebildet werden.
@@ -44,5 +44,5 @@ Wie kann ein autonomes Fahrzeug zwischen den verschiedenen Parteien entscheiden?
 Welche Faktoren werden für die Entscheidung benötigt?
 
 \subsubsection{Wann ist ein autonomes Kraftfahrzeug sicher?}
-Aktuell gibt es keine Eindeutige definition ab wann ein Kraftfahrzeug als sicher eingestuft werden kann.
+Aktuell gibt es keine eindeutige Definition ab wann ein Kraftfahrzeug als sicher eingestuft werden kann.
 Welche Eigenschaften müssen hierfür erfolgt werden?
