--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -63,196 +63,14 @@ Das Ziel dieser Arbeit ist die folgende Forschungsfrage nach dem aktuellen Stand
 \textit{Welche Auswirkungen haben Kraftfahrzeuge auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?}
 Mithilfe von frei zugänglicher Literatur soll diese Frage bearbeitet werden.
 Folgende Hypothese wird untersucht:
-\textit{Je mehr Fahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus}
+\textit{Je mehr Kraftfahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus}
 
 \section{Aufbau der Arbeit}
 Der Aufbau dieser Arbeit besteht aus mehreren Teilen.
 Zuerst wird ein Überblick über die technischen Teilsysteme von Kraftfahrzeugen gegeben, und wie diese
 in Klassen Eingeordnet werden.
-Da autonomes fahren eine aktuelle Entwicklung ist wird in einem Teil erläutert in welchen Stufen die Fähigkeiten der Fahrzeuge Eingeordnet werden können.
+Da autonomes fahren eine aktuelle Entwicklung ist wird in einem Teil erläutert in welchen Stufen die Fähigkeiten der Kraftfahrzeuge Eingeordnet werden können.
 Ferne werden negative Belastungen auf die Umwelt durch Kraftfahrzeuge eingegangen und wie diese entstehen.
 Untersucht werden auch an welchen Stellen eine Reduzierung von negativen Einflüssen möglich ist.
 
-% Anhand der technologischen Entwicklung, erster Testfelder, sowie Prototypen Industrie stellt  die Frage,
-% welche Umwelteffekte beim autonomen Fahren auftreten werden.
-% Dies hängt mitunter mit neuen Antriebsformen (z. B. Elektroantrieb) und Betriebsmodellen (z. B. geteilte
-% Fahrzeuge) zusammen.
-
-% Je nach der Entwicklung in den einzelnen Bereichen werden auch sich unterschiedliche Kraftfahrzeuge bei einer Einführung des autonomen Fahrens
-% durchsetzten.
-% Als Umwelteffekte des Autonomen Fahrens bezeichnet man die Einflüsse die sich durch autonomen Fahren ändern, hierbei kann es zur Verringern oder Anstieg von Schadstoffausstößen kommen, oder eine
-% Veränderung in der Infrastruktur, da Parkplätze oder Seitenstreifen nicht mehr in gleicher Zahl benötigt werden oder der Ausbau von Straßen da das Verkehrsaufkommen zugenommen hat.
-% Der Umstieg auf autonomes Fahren erfolgt nicht in einem Schritt,
-% sondern schrittweise oder je nach Fahrzeugs
-% nur für einzelne Anwendungsfälle (siehe Anlage I, Stufen der Automatisierung, autonomes
-% Fahren bei Level 5). Im Öffentlichen Verkehr (ÖV) könnten sich Veränderungseffekte schneller einstellen.
-
-% Denn durch den Verkehr verursachten Schadstoffe sind eine wesentliche Ursache für den schnell voranschreitenden Klimawandel.
-
-
-
-
-
-
-
-
-
-
-
-% \subsection{Klimaschutzziele}
-% Wer bestimmt Klimaschutzziele?
-% Welche Klimaschutzziele gibt es?
-% Welche Klimaschutzziele sollen erreicht werden?
-
-
-
 \newpage
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-% \section{LKW}
-% In den Marktstudien wird darauf verwiesen, dass sich die Wirkungen vor
-% allem aus Einsparungen bei den Personalkosten und bei den Kraftstoffkosten
-% zusammensetzen. PwC sieht durch Platooning ein Einspareffekt bei den
-% Kraftstoffkosten von rund 7Prozent. Roland Berger beziffert den Einspareffekt in
-% Höhe von 8 Prozent für das führende Fahrzeug und in Höhe von 14Prozent für die
-% folgenden Fahrzeuge bei einer Geschwindigkeit von 85 km/h.16 Das
-% International Transport Forum beziffert die Kraftstoffkosteneinsparungen
-% (infolge verbesserten Brems- und Beschleunigungsverhaltens) bei
-% automatisiertem „eco-driving“ (keine Platoons) in Höhe von 4-10Prozent, bei
-% teilweise manuell gesteuerten Platoons in Höhe von 6-10Prozent und bei
-% vollautomatisierten Platoons bei über 10Prozent
-
-
-
-% Klima-/Umwelteffekte
-
-
-
-% \section{Infrastrukturen für Autonomes Fahren}
-% Die Entwicklung der Zukunftstechnologien und des Markthochlaufs von autonomen Fahrzeugen (Level 4, 5) erfordert neben der Weiterentwicklung von Fahrzeugtechnologien für Autonomes Fahren (Level 5) auch materielle (5G, Datenstandards,)
-% immaterielle (z.B. Software/AI-Kompetenzen) und institutionelle Infrastrukturen
-% (rechtlich-regulativer Rahmen) als Erfolgsvoraussetzungen
-% \subsection{Materielle Infrastrukturen: Datenübertragung (5G), Datenstandards}
-% Als wesentliche technische Voraussetzungen für autonomes Fahren gelten Sensortechnologien, Software-Algorithmen und hochauflösende Karten. Für letzteres
-% haben die deutschen Hersteller durch den Kauf des Kartenanbieters Here bereits
-% die Voraussetzungen geschaffen. Gleichzeitig ist jedoch auch die Datenkommunikation zwischen Fahrzeug und Straßeninfrastruktur (Vehicle-to-Infrastructure) sowie der Fahrzeuge untereinander (Vehicle-to-Vehicle) und zu großen Rechenzentren (z.B. der Hersteller) fundamental. Das autonom fahrende Auto muss zu anderen
-% Fahrzeugen eine Verbindung herstellen und ihnen Dinge mitteilen können, die es
-% selbst gelernt hat.102 Reaktionsschnelle Mobilfunknetze (5G) sowie Datenstandards
-% für einen breitbandigen und sicheren Datenaustausch sind hierfür essentiell.103
-% So produzieren autonome Fahrzeuge exponentiell ansteigende Mengen an Daten
-% durch ihre Sensorik wie Laser- (Lidar), Radarsensoren und Kameras, die sich auf
-% 4.000 Gigabyte täglich summieren können. In cloudbasierten Datenpools werden
-% diese Datenströme der autonom fahrenden Autos in Echtzeit in Datensätze verwandelt und an das Auto zurückübermittelt, damit es seine gesamte Umgebung
-% erkennt. Dabei spielen Anwendungen der Künstlichen Intelligenz (KI) und des
-% maschinellen Lernens eine entscheidende Rolle.104
-% Gleichzeitig stellen 5G-Funkkomponenten für autonome Fahrzeuge eine
-% zusätzliche Schutzebene bereit, indem diese mit Fahrzeugen im näheren Umfeld
-% und der Infrastruktur am Straßenrand zuverlässig und schnell kommunizieren,
-% z.B. wenn die Sensoren keine Sichtverbindung haben oder nachteilige Wetterbedingungen herrschen.105 Darüber hinaus könnten 5G-Netze mit geringen Latenzzeiten auch die Fernsteuerung autonomer Fahrzeuge ermöglichen. Flottenbetreiber
-% von autonomen Fahrdiensten könnten dann in Fällen, in denen das Fahrzeug überfordert ist, mittels Fernsteuerung eingreifen. Allerdings dürften künftig sicherheitskritische Funktionen von autonomen Fahrzeugen nicht auf Mobilfunkverbindungen angewiesen sein. So gibt etwa die Google-Tochter Waymo an, dass ihre
-% Fahrzeuge auch ohne eine ständige Verbindung sicher funktionieren würden.
-% Prinzipiell sieht auch das Bundesverkehrsministerium 5G in der Mobilität als
-% zwingende Infrastrukturvoraussetzung,106 wobei das geplante 5G-Netz für zahlreiche Zukunftstechnologien ein Engpassfaktor darstellt, darunter das Internet
-% of Things (IoT).107 Heutige Festnetz-, Mobilfunk- und Satellitennetze sind nicht
-% für Datenaufkommen, Reaktionsgeschwindigkeiten und die Versorgungssicherheit des Autonomen Fahrens ausgelegt. Automobilhersteller wie VW, Daimler und
-% BMW haben sich bereits 2016 in der 5G Automotive Association (5GAA) zusammengeschlossen, um die notwendige Standardisierung für vernetzte und autonome
-% Fahrzeuge voranzutreiben. Allerdings gibt es selbst zwischen den in der 5GAA versammelten Herstellern noch Wettstreite um technische Konzepte und Kommunikationsstandards.108 Prognosen gehen daher davon aus, dass die Hochlaufphase für
-% 5G sich erst ab 2023 stark intensiviert und dann bis 2028 auch alle regulatorischen
-% Fragen abgeschlossen sein werden.109
-% Insgesamt sind 5G-Netze für Autonomes Fahren und das vernetzte Fahrzeug
-% von großer Bedeutung, da dadurch erst sichere kommerzielle Anwendungen von
-% vernetzten und autonomen Fahrzeugen möglich sind. Entsprechend muss deren
-% Aufbau beschleunigt und weiter intensiviert werden. Die Investitionen in den
-% 5G-Aufbau werden in einer 2016 veröffentlichten Studie für die EU-Kommission
-% bis 2025 auf rund 56 Mrd. Euro veranschlagt. Dieselbe Studie prognostiziert
-% im Gegenzug bis zu 113 Mrd. Euro zusätzliche Umsätze durch 5G in vier Sektoren, darunter auch Automotive, sowie die Schaffung von 2,3 Mio. Arbeitsplätzen
-% europaweit.11
-
-
-
-% \chapter{Mobilitätsdienstleistungen und deren besondere Infrastrukturvoraussetzunge}
-% \section{Konzept, Klima-/Umweltrelevanz, Markttrends}
-% Mobilitätsdienstleistungen sind ein zentrales Zukunftsfeld für Automobilhersteller,
-% Digitalplayer wie Google, Start-ups wie Uber sowie von Städten und Kommunen
-% gleichermaßen. Die Vision eines «Mobility as a Service» (MaaS) beschreibt die Vision
-% einer bruchlosen, hoch vernetzten Reise- bzw. Mobilitätskette über verschiedene
-% Verkehrsträger hinweg: von der intermodalen Routenplanung über die Buchung on
-% Demand und der Bezahlung bis hin zur Abwicklung der Fahrten.123 Darüber hinaus
-% können noch weitere Services wie Parkplatzdienste, Charging-Dienste oder Entertainment-Dienste hinzugezählt werden (vgl. für eine Übersicht Abb. 7).
-% Aus Kundensicht erweitern sich durch die neuen Mobilitätsangebote wie
-% Car-Sharing, Bike- und Ride-Sharing die Mobilitätsangebotsoptionen. War bis vor
-% kurzem ein eher monomodales Verkehrsverhalten dominant, das alle Fahrten entweder mit dem privaten Auto oder mit dem ÖPNV vorsah, entwickelt sich mittels
-% internetfähiger Smartphones ein intermodales oder gar multimodales Mobilitätsmuster: D.h. Kunden können ihren Mobilitätsbedarf individuell und schnell per
-% Fingertipp mit einer breiten Vielfalt von Mobilitätsangeboten befriedigen und dabei
-% nach ihren Präferenzen die günstigste, schnellste oder komfortabelste Kombination von Verkehrsmitteln auswählen. Durch multimodale Apps wie Moovel, Qixxit,
-% Ubigo oder Whim kann die Reisekette mit dem Smartphone künftig in Echtzeit
-% einfach und sicher geplant, gebucht und teilweise bereits bezahlt werden. Das
-% Fernziel ist Interoperabilität, also die bruchlose Übersicht, Verfügbarkeit und Buchbarkeit als kundenindividuell optimierter Mix aus allen Mobilitätsangeboten –
-% ÖPNV, Taxi, Car-Sharing, Ride-Hailing und Ride-Sharing, Leihwagen oder BikeSharing etc. – für die urbane Mobilität.124
-% Mobilitätsdienstleistungen bzw. MaaS begründen gleichzeitig neue Geschäftsmodelle auf Basis der Mobilitätseffizienz-, der Mobilitätszeit- und der Mobilitätssystem-Revolution. Für Automobilhersteller ergibt sich durch Mobilitätsdienstleistungen in Kombination mit dem Autonomen Fahren die Chance von neue
-% Geschäftsfeldern als Ersatz für die sich perspektivisch auflösenden bisherigen
-% kommerziellen Pfeiler, die wesentlich auf den Autokauf bzw. Autobesitz und
-% Freude am manuellen Autofahren angelegt waren.125 Gleichsam erweitert sich
-% jedoch auch das Wettbewerbsumfeld durch Digitalplayer wie Apple, Google
-% oder Alibaba und Baidu, die ihre Ökosysteme aus Kommunikations- und Entertainment-Services um Mobilitätsdienste erweitern wollen. Außerdem drängen
-% Start-ups wie Uber, Lyft, BlablaCar und andere mit innovativen Services einer
-% digitalen Mobility-on-Demand auf den Plan.
-% Hinzu kommt, dass künftig mit den oben skizzierten Trends von Elektromobilität und autonomen Fahrzeugen bzw. Robo-Taxis weitere innovative und kostengünstige Mobilitätsangebote marktreif sein werden. Diese werden nicht nur
-% das Spektrum von Mobilitätsdienstleistungen erweitern. Sie führen auch zu einem
-% Verschmelzen von öffentlichem und privatem Verkehr, weil das autonome Fahrzeug prinzipiell sowohl privat genutzt als auch als Taxi, Car-Sharing-Fahrzeug
-% oder Rufbus eingesetzt werden kann.126 Dabei stellt sich auch die Frage, ob durch
-% die sich entwickelnden autonomen Fahrdienste der ÖPNV kannibalisiert wird
-% oder ob diese einen positiven Beitrag zur Minderung des Autoverkehrs bzw. der
-% Klimabelastung des Verkehrs leisten können.
-
-% \subsection{Umwelt-/Klimarelevanz}
-% Die lokale bzw. regionale Ebene wird eine wichtige Rolle bei der Ausgestaltung
-% der Mobilitätsdienstleistungen der Zukunft spielen und damit auch bei der Frage,
-% ob die neuen Angebote einen positiven Beitrag für den Klimaschutz im Verkehrsbereich erbringen können.127 Städte und Kommunen sind nicht nur mit
-% der Verkehrsplanung, den baulichen Infrastrukturen von Straßen und Parkplätzen und dem Betrieb des öffentlichen Personennahverkehrs betraut. Sie können
-% auch über die Ausgestaltung von integrierten Mobilitätsdienstleistungen mitentscheiden. Dabei ist der verkehrsplanerische Handlungsdruck in urbanen Gebieten
-% aufgrund zunehmender Flächenknappheit bei einem gleichzeitig wachsenden
-% Verkehr und Mobilitätsbedürfnis der Menschen hoch.
-% Eine zentrale Bedeutung kommt den Robo-Taxis bzw. autonomen Fahrangeboten zu, bei denen noch nicht klar ist, ob sie in der Gesamtbilanz positive
-% oder negative Umwelt- und Klimaeffekte haben werden (vgl. Kapitel 4). So werden zu Beginn der 2020er Jahre erste autonom fahrende Shuttles auf deutschen Straßen unterwegs sein und sich wahrscheinlich dynamisch entwickeln.
-% Studien rechnen bis zum Jahr 2030 damit, dass bereits 37 Prozent des PKWVerkehrsaufkommens autonom bzw. in geteilten Systemen (Car Pooling, RideSharing) absolviert werden könnten.128 Es ist damit zu rechnen, dass die
-% Automatisierung des Fahrens erhebliche Auswirkungen auf das Preisgefüge und
-% damit die Nutzung der Mobilitätsservices besitzen wird.129 Robo-Taxen könnten
-% Berechnungen zufolge bis zu 60 Prozent günstiger betrieben werden als konventionelle.130 In den Möglichkeiten der Kombination von autonomen Taxen und
-% Sharing-Konzepten liegt dabei enormes Potenzial für die Reduzierung des Fahrtaufkommens. Unter heute geltenden Regulierungsvorschriften (u.a. Personenbeförderungsgesetz, gesetzliche Regelungen für autonomes Fahren) ist allerdings
-% unklar, ob und wie dieses Potenzial gehoben werden kann.131 Es wird hierbei
-% wesentlich auch auf eine umweltgerechte Flankierung und Ausrichtung der politischen Regulation bzw. Anreizstrukturen ankommen, insbesondere auch auf
-% Ebene der Kommunen. Dabei müssen autonome Fahrangebote in ein multimodales Verkehrssystem integriert werden.
