--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -5,9 +5,9 @@ möglicherweise sind bessere Lösungen technisch nicht umsetzbar,
 gesetzlich nicht erlaubt oder wirtschaftlich unattraktiv.
 Der aktuelle menschliche Lebensstandard zeichnet sich durch einen
 hohen Energiebedarf, viele verschiedene global industriell gefertigte Produkte
-und einem hohen Verkehrsaufkommen.
+und einen hohen Verkehrsaufkommen aus.
 
-Die Umweltbelastung entsteht auf verschieden Ebenen, die sich in ihrer Gegebenheit unterscheiden.
+Die Umweltbelastung entsteht auf verschieden Ebenen, die sich in ihrer Form und Gegebenheit unterscheiden.
 Es gibt energetische Belastungen, wie Strahlen, Lärm und Erschütterungen.
 Belastungen durch feste Stoffe wie Abfälle welche durch Bau und Abbruch entstehen,
 Abfälle aus Produktionen und
@@ -17,15 +17,15 @@ Auch Flüssigkeiten können die Umwelt belasten.
 Diese für die Umwelt schädlichen Flüssigkeiten können
 in der Produktion durch Chemie Fabriken,
 durch Reste von Medikamenten in Urin oder durch
-Unfälle bei der Gewinnung von Rohöl in in die Umwelt gelangen.
+Unfälle bei der Gewinnung von Rohöl in die Umwelt gelangen.
 Neben den flüssigen Schadstoffen sind auch gasförmige Schadstoffe eine starke Belastung für die Umwelt.
 
-Diese gasförmigen Schadstoffe treten in From von Luftschadstoffen und Feinstaub auf.
-Luftschadstoffe können durch verschiedene Arten entstehen, die sowohl natürlichen Ursprungs aber vor allem
+Diese gasförmige Schadstoffe treten in Form von Luftschadstoffen und Feinstaub auf.
+Luftschadstoffe können durch verschiedene Arten entstehen, die sowohl natürlichen Ursprung aber vor allem
 durch menschliches Handeln entstehen.
 Neben der Erzeugung von Energie trägt auch das hohe Verkehrsaufkommen zum großen Teil der Luftverschmutzung bei.
 Diese Arten von Luftverschmutzung können ebenso verantwortlich für Krankheiten und vorzeitigen Tod von Menschen sein.
-Gerade Kinder können davon betroffen sein da ihr Körper noch nicht vollständig ausgewachsen ist,
+Gerade Kinder können davon betroffen sein, da ihr Körper noch nicht vollständig ausgewachsen ist,
 oder ältere Personen dessen Immunsystem nicht mehr gut funktioniert.
 Feinstaub kann in den Körper eindringen und schwerwiegende Krankheiten auslösen.
 Durch unsachgemäße Wiederverwertung können Luftverschmutzungen entstehen,
@@ -42,17 +42,17 @@ vielfältige Chancen wie ein geringerer Ausstoß von Feinstaub gesehen werden.
 
 \section{Ausgangssituation}
 Die Folge von globaler Erwärmung sowie die Veränderung des Klimas sind allgegenwärtig und betreffen den gesamten Globus.
-Regionale Veränderungen von Wetter fallen immer häufiger extremer aus.
+Regionale Veränderungen von Wetter fallen immer extremer aus.
 Starke unregelmäßige Wetterereignisse führen zu materiellen Schäden an Gebäuden und Infrastrukturen, vor allem zu nennenswerten Ertragsverlusten in der Landwirtschaft.
 Die globale Erderwärmung steigt kontinuierlich an.
 % Benötigt werden Maßnahmen, die sich an unsere Umwelt anpassen kann, 
 % und weitreichende Anstrengungen zur Reduzierung von Umweltbelastungen durch menschliches Handeln. 
-Stark betroffen sind Entwicklungs- und Schwellenländer, die mit Überschwemmungen oder Hitzewellen zu kämpfen müssen.
+Stark betroffen sind Entwicklungs- und Schwellenländer, die mit Überschwemmungen oder Hitzewellen zu kämpfen haben.
 
 % Die Resultate der Umweltkatastrophen sind verehrend.
 
 Luftschadstoffe haben massive negative Auswirkungen auf unsere Gesundheit.
-Viele Menschen sind Feinstaubwerten ausgesetzt, die sie als gesundheitsschädlich für den Menschen eingestuft werden können.
+Viele Menschen sind Feinstaubpartikeln ausgesetzt, die als gesundheitsschädlich für den Menschen eingestuft sind.
 Die Reduktion von Feinstaub ist daher ein wichtiger Teil der Ausgangssituation, die für eine Begrenzung der Erderwärmung unternommen werden müssen.
 
 Deswegen werden in dieser Fallstudie verschiedene Einsparpotenziale für Umweltbelastungen durch autonome Kraftfahrzeuge untersucht.
@@ -60,17 +60,17 @@ Deswegen werden in dieser Fallstudie verschiedene Einsparpotenziale für Umweltb
 
 \section{Ziel der Arbeit}
 Das Ziel dieser Arbeit ist die folgende Forschungsfrage nach dem aktuellen Stand der Technik zu beantworten:
-\textit{Welche Auswirkungen haben Kraftfahrzeuge auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?}
+Welche Auswirkungen haben Kraftfahrzeuge auf die Umwelt und wie kann autonomes Fahren die negativen Auswirkungen reduzieren?
 Mithilfe von frei zugänglicher Literatur soll diese Frage bearbeitet werden.
 Folgende Hypothese wird untersucht:
-\textit{Je mehr Kraftfahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus}
+Je mehr Kraftfahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus.
 
 \section{Aufbau der Arbeit}
 Der Aufbau dieser Arbeit besteht aus mehreren Teilen.
-Zuerst wird ein Überblick über die technischen Teilsysteme von Kraftfahrzeugen gegeben, und wie diese
-in Klassen Eingeordnet werden.
-Da autonomes fahren eine aktuelle Entwicklung ist wird in einem Teil erläutert in welchen Stufen die Fähigkeiten der Kraftfahrzeuge Eingeordnet werden können.
-Ferne werden negative Belastungen auf die Umwelt durch Kraftfahrzeuge eingegangen und wie diese entstehen.
-Untersucht werden auch an welchen Stellen eine Reduzierung von negativen Einflüssen möglich ist.
+Zuerst wird ein Überblick über die technischen Teilsysteme von Kraftfahrzeugen gegeben und wie diese
+in Klassen eingeordnet werden.
+Da autonomes fahren eine aktuelle Entwicklung ist, wird in einem Teil erläutert in welchen Stufen die Fähigkeiten der Kraftfahrzeuge eingeordnet werden können.
+Ferner werden negative Belastungen auf die Umwelt durch Kraftfahrzeuge eingegangen und wie diese entstehen.
+Untersucht wird auch Reduzierung von negativen Einflüssen und an welchen Stellen sie möglich ist.
 
 \newpage
