--- a/template/Fallstudie/Hauptteil/Hauptteil.tex
+++ b/template/Fallstudie/Hauptteil/Hauptteil.tex
@@ -2,17 +2,17 @@
 \input{Fallstudie/Kraftfahzeuge/Kraftfahzeuge.tex}
 
 
-\section{Erwartungen an autonome FahrzKraftfahrzeuge}
+\section{Erwartungen an autonome Kraftfahrzeuge}
 2019 haben das
 Bundesministerium für Bildung und Forschung (BMBF) zusammen mit dem
 Bundesministerium für Wirtschaft und Energie (BMWi) und dem
 Bundesministerium für Verkehr und digitale Infrastruktur (BMVI)
 ein Plan für die Forschung am autonomen Fahren beschlossen.
 
-Dieser Plan soll sich an vielen Punkten orientieren wie unter anderem Sicherheit, Effizienz, Nachhaltigkeit, Barrierefreiheit so wie Bezahlbarkeit.
+Dieser Plan soll sich an vielen Punkten orientieren wie unter anderem Sicherheit, Effizienz, Nachhaltigkeit, Barrierefreiheit sowie Bezahlbarkeit.
 
 \subsection{Gesetzliche Regelungen}
-Deutschland als Vorreiter in der Automobilindustrie hat ein ganz großes Potential im Segment des autonomen Fahrers.
+Deutschland als Vorreiter in der Automobilindustrie hat ein ganz großes Potential im Segment des autonomen Fahrens.
 
 Am 21. Juni 2017 wurde ein Gesetz erlassen welches autonomes Fahren in gewissen Situationen ermöglicht.
 Im Jahr 2022 möchte Deutschland autonome Kraftfahrzeuge die sich in der Stufe 4 befinden in öffentlichen Straßenverkehr bringen.
@@ -48,7 +48,7 @@ Erste Wirkungen können sich bereits im Mischverkehr aus autonom und konventione
 Brems- und Beschleunigungsvorgängen.
 
 Die Wirkungen könnten sich mit einer steigenden Marktdurchdringung von autonomen Kraftfahrzeugen
-durch sinkenden stockenden Verkehr sowie eine Reduzierung von Staus bemerkbar machen.
+durch Senkung von stockenden Verkehr sowie eine Reduzierung von Staus bemerkbar machen.
 
 \subsubsection{Kraftstoffeinsparungen auf Autobahnen}
 Das Fraunhofer Institut für Arbeitswirtschaft und Organisation (IAO) hat erste Schätzungen zu Kraftstoffeinsparungen auf Autobahnen im Individualverkehr in Deutschland vorgenommen.
@@ -57,7 +57,7 @@ Dort wurde die Wirkung von drei bereits existierenden Assistenzsystemen (Stau-Ch
 der Automatisierungsstufe 3 auf Autobahnen begutachtet.
 
 Die Wirkung wurde für zwei verschiedene Szenarien ausgewiesen.
-Das erste Szenario basiert darauf dass alle Kraftfahrzeuge autonom fahren.
+Das erste Szenario basiert darauf, dass alle Kraftfahrzeuge autonom fahren.
 Im zweiten Szenario betrug der Anteil ungefähr 45.000 autonome Kraftfahrzeuge.
 
 Auf der Basis von einer 10-20 prozentigen Reduzierung des Kraftstoffverbrauchs ergab sich
@@ -102,7 +102,7 @@ Die Menge der  Kraftstoffeinsparungen hängt unter anderem von mehreren Faktoren
 \subsection{Potential bei Flottenfahrzeugen}
 Wenn autonome Kraftfahrzeuge in einer Flotte betrieben werden, wäre auch eine intensivere Nutzung der autonomen Kraftfahrzeugen zu erwarten,
 wodurch sich der Nutzungszeitraum verkürzen würde.
-Dies würde dazu führen dass Flottenfahrzeuge früher ausgetauscht und erneuert werden müssen.
+Dies würde dazu führen, dass Flottenfahrzeuge früher ausgetauscht und erneuert werden müssen.
 
 Durch den schnellen Austausch der Flottenfahrzeuge durch modernere Kraftfahrzeuge mit technologischer Erneuerung,
 die weniger Luftschadstoffe und Emissionen produzieren, könnte zu einer Reduktion von verkehrsbedingen Luftschadstoffen und Emissionen führen.
@@ -122,7 +122,7 @@ Dadurch könnte auf ungefähr 200 Tausend Kraftfahrzeuge verzichtet werden.
 \newpage
 
 \subsection{Diskussion der Forschungsfrage}
-Bei der Betrachtung der Frage welche Auswirkungen Kraftfahrzeuge auf die Umwelt haben, und wie autonomes Fahren die negativen Auswirkungen reduzieren könne,
+Bei der Betrachtung der Frage welche Auswirkungen Kraftfahrzeuge auf die Umwelt haben und wie autonomes Fahren die negativen Auswirkungen reduzieren könne,
 können die zusammengestellten Informationen in dieser Fallstudie herangezogen werden.
 Mit Hilfe dieser Informationen kann die Forschungsfrage folgendermaßen beantwortet werden:
 
@@ -130,6 +130,6 @@ Autonomes Fahren alleine kann die negativen Auswirkungen von Kraftfahrerzeugen a
 Viel mehr kann ein Verbund neuer Technologien und Verhaltensmuster die negative Auswirkungen reduzieren.
 
 \subsection{Verifikation der Hypothese}
-Bei der Verifikation der Hypothese \textit{''Je mehr Kraftfahrzeuge
-	autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus''}
+Bei der Verifikation der Hypothese ''Je mehr Kraftfahrzeuge
+autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus''
 fällt auf, dass diese aufgrund von fehlender Datenlage und Langzeitstudien nicht verifiziert werden kann.
