--- a/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
@@ -1,6 +1,6 @@
-\subsection{Autonomes Kraftfahrzeuge}
-Beim autonomen Fahren, fährt ein Kraftfahrzeug Verwaltungsgemäß selbständig.
-Für Kraftfahrzeuge wurden von der \ac{SAE} Automatisierungsgrade definiert\cite{PRACTICE}.
+\subsection{Autonome Kraftfahrzeuge}
+Beim autonomen Fahren, fährt ein Kraftfahrzeug verwaltungsgemäß selbständig.
+Für Kraftfahrzeuge wurden von der \ac{SAE} Automatisierungsstufen definiert\cite{PRACTICE}.
 \begin{itemize}
 	\item Stufe 0 (Keine Automation)
 	\item Stufe 1 (Assistenzsysteme)
