--- a/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Teilsysteme von Kraftfahrzeugen/Teilsysteme von Kraftfahrzeugen.tex
@@ -1,5 +1,5 @@
 \subsection{Teilsysteme von Kraftfahrzeugen}
-Moderne Kraftfahrzeuge werden aus folgenden Teilsysteme gebildet:
+Moderne Kraftfahrzeuge werden aus folgenden Teilsystemen gebildet:
 \begin{itemize}
 	\item Antriebseinheit
 	\item Arbeitseinheit
@@ -61,7 +61,7 @@ Beispiele für Regelungen sind:
 	      Sollte die Temperatur unter der Solltemperatur liegen, wird die Klimaautomatik auf Heizen gestellt.
 	      Sollte die Temperatur über der Solltemperatur liegen, wird die Klimaautomatik auf Kühlen gestellt.
 	\item Lichtautomatik: Es gibt eine Schwelle bei der das Licht eingeschaltet werden soll.
-	      Es gemessen wie hell das Umgebungslicht ist.
+	      Es wird gemessen wie hell das Umgebungslicht ist.
 	      Sollte das Umgebungslicht zu gering sein wie zum Beispiel im Tunnel oder bei Dämmerung wird das Licht eingeschaltet.
 	      Sobald das Umgebungslicht wieder hell genug ist zum Beispiel beim verlassen des Tunnels oder bei Sonnenaufgang, wird das Licht wieder ausgeschaltet.
 \end{itemize}
