--- a/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Umweltbelastungen durch Kraftfahrzeuge/Umweltbelastungen durch Kraftfahrzeuge.tex
@@ -17,7 +17,7 @@ Durch Verbrennung von Kraftstoffen entstehen verschiedene giftige Schadstoffe:
 \begin{itemize}
 	\item {\ac{CO}}
 	\item {\ac{NO}}
-	\item unverbrannte Kohlenwasserstoffe (HC)
+	\item {\ac{HC}}
 \end{itemize}
 Die Abgase strömen nach der Verbrennung im Verbrennungsraum durch die Abgasanlage in die Umwelt.
 Es gibt auch ungiftige Stoffe die durch die Verbrennung abgegeben werden wie zum Beispiel \ac{Wasser} und \ac{CO2}.
@@ -59,7 +59,7 @@ Das befahren einer Umweltzone ist dann nur mit einer entsprechenden Kennzeichnun
 
 
 \subsection{Infrastruktur}
-Auch die Infrastruktur belastet die Umwelt, afu verschiedene Arten:
+Auch die Infrastruktur belastet auf verschiedene Arten die Umwelt:
 \begin{itemize}
 	\item Wälder werden abgeholzt um die Verkehrsanbindung zu verbessern
 	\item Straßen werden vergrößert um ein höheres Verkehrsaufkommen zu bewältigen
