--- a/template/Fallstudie/Schluss/Schluss.tex
+++ b/template/Fallstudie/Schluss/Schluss.tex
@@ -26,7 +26,7 @@ sondern auch durch den Abrieb der Reifen und Bremsen und Produktion von Kraftfah
 ergeben sich hier Einspareffekte bei der Reduzierung von Fahrten und der Reduktion von Fahrzeugbeständen.
 
 Aufgrund der hohen Aktualität kann ein eindeutiger Trend noch nicht abgebildet werden.
-Vielmehr kann die Summe von mehren neuen Technologien und geänderten Verhaltensmuster eine Trendwende schaffen.
+Vielmehr kann die Summe von mehreren neuen Technologien und geänderten Verhaltensmuster eine Trendwende schaffen.
 Hierunter könnte Elektromobilität, sowie der Verzicht auf ein eigenes Fahrzeug durch verschiedene
 autonome Mobilitätsdienstleister eine Rolle spielen.
 
