--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -21,6 +21,7 @@
 	\acro{kmh}[km/h]{Kilometer pro Stunde}
 	\acro{t}{Tonnen}
 	\acro{NO}{Stickoxide}
+	\acro{HC}{unverbrannte Kohlenwasserstoffe}
 	\acro{Wasser}[H\textsubscript{2}O]{Wasser}
 	\acro{CO2}[CO\textsubscript{2}]{Kohlenstoffdioxid}
 	\acro{CO}{Kohlenmonoxid}
