--- a/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
@@ -8,7 +8,6 @@ Die EU Kommission hat hierfür acht Klassen definiert\cite{VERORDNUNG}:
 	\item Klasse M: Vorwiegend für die Beförderung von Fahrgästen und deren Gepäck ausgelegte und gebaute Kraftfahrzeuge
 	\item Klasse N: Vorwiegend für die Beförderung von Gütern ausgelegte und gebaute Kraftfahrzeuge
 	\item Klasse O: Anhänger, die sowohl für die Beförderung von Gütern und Fahrgästen als auch für die Unterbringung von Personen ausgelegt und gebaut sind
-	\item Klasse S: unvollständige Kraftfahrzeuge, die der Unterklasse der Kraftfahrzeuge mit besonderer Zweckbestimmung zugeordnet werden soll
 	\item Klasse R: Anhänger, die in der Land- und Forstwirtschaft verwendet werden
 	\item Klasse S: Maschinen, die in der Land- und Forstwirtschaft zum Einsatz kommen und gezogen werden
 	\item Klasse T: Zugmaschinen, die in der Land- und Forstwirtschaft verwendet werden wie Traktoren
@@ -18,7 +17,8 @@ Die EU Kommission hat hierfür acht Klassen definiert\cite{VERORDNUNG}:
 Die relevantesten Klassen sind M und N.
 
 \subsection*{Klasse M}
-In der Klasse M werden Kraftfahrerzeuge eingeordnet die für die Beförderung von Personen und Gepäck zuständig sind und mindestens 4 Räder haben sowie eine Hochgeschwindigkeit von über 25 \ac{kmh} haben.
+In der Klasse M werden Kraftfahrzeuge eingeordnet die für die Beförderung von Personen und Gepäck zuständig sind und mindestens 4 Räder haben,
+sowie eine Hochgeschwindigkeit von über 25 \ac{kmh} haben.
 \newline
 Die Klasse M spaltet sich in 3 Unterklassen auf:
 \begin{itemize}
@@ -27,9 +27,9 @@ Die Klasse M spaltet sich in 3 Unterklassen auf:
 	\item {Klasse M3}
 \end{itemize}
 \subsubsection{Klasse M1}
-Kraftfahrzeuge der Klasse M1 haben über die Eigenschaften der Klasse M noch folgende weitere Eigenschaften:
+Kraftfahrzeuge der Klasse M1 haben neben den Eigenschaften der Klasse M noch folgende weitere Eigenschaften:
 \begin{itemize}
-	\item {nicht mehr als 8 Sitzplätze und 1 Platz für den Fahrer}
+	\item {nicht mehr als 8 Sitzplätze und ein weiterer Platz für den Fahrer}
 	\item {keine Stehplätze}
 	\item {zulässiges Gesamtgewicht von maximal 3,5 \ac{t}}
 \end{itemize}
@@ -58,7 +58,7 @@ Kraftfahrzeuge der Klasse M3 haben über die Eigenschaften der Klasse M noch fol
 In der Klasse M3 sind Kraftfahrzeuge wie ein Eindecker-Bus über 5 \ac{t} oder Doppeldecker-Bus über 5 \ac{t} zu finden.
 
 \subsection*{Klasse N}
-In der Klasse N werden Kraftfahrerzeuge eingeordnet die für die Beförderung von Gütern zuständig sind und mindestens 3 Räder haben sowie ein zulässiges Gesamtgewicht von über 1 \ac{t} haben.
+In der Klasse N werden Kraftfahrzeuge eingeordnet die für die Beförderung von Gütern zuständig sind und mindestens 3 Räder haben, sowie ein zulässiges Gesamtgewicht von über 1 \ac{t} haben.
 Die Klasse N spaltet sich in 3 Unterklassen auf:
 \begin{itemize}
 	\item {Klasse N1}
@@ -75,13 +75,13 @@ In der Klasse N1 sind Kraftfahrzeuge die in dicht besiedelten Regionen gut zurec
 Kraftfahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von 3,5 \ac{t} bis 12 \ac{t}.
 In der Klasse N2 sind Kraftfahrzeuge die Regionalgüter befördern.
 
-Diese Kraftfahrerzeuge können die Waren aus einem Zentrallager in die Filialen transportieren
+Diese Kraftfahrzeuge können die Waren aus einem Zentrallager in die Filialen transportieren
 und sind darauf ausgelegt hunderte Kilometer zurück legen zu können.
 
 \subsubsection{Klasse N3}
 Dazu gehören Kraftfahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von mehr als 12 \ac{t}.
 In der Klasse N3 sind Kraftfahrzeuge die überregionale Güter befördern.
 
-Diese Kraftfahrerzeuge können ein vielfaches der Ladung als Kraftfahrzeuge der Klasse N2 aufnehmen
+Diese Kraftfahrzeuge können ein vielfaches der Ladung als Kraftfahrzeuge der Klasse N2 aufnehmen
 und sind darauf ausgelegt tausende Kilometer zurück zulegen.
 
