--- a/template/abstract.tex
+++ b/template/abstract.tex
@@ -1,35 +1,32 @@
 \chapter*{Abstract}
-Beginnend bei der Produktion, über den Betrieb bis hin zur Entsorgen erzeugen Kraftfahrzeuge
-negative Auswirkungen im Umwelt.
+Beginnend bei der Produktion, über den Betrieb bis hin zur Entsorgung haben Kraftfahrzeuge
+negative Auswirkungen auf die Umwelt.
 Durch Luftschadstoffe und Feinstaub kann es zu schwerwiegenden Krankheiten und Tod kommen.
 
 
-Durch neue technologische Fortschritte wie dem autonomen Fahren können
-Reduktionen von Luftschadstoffen,
+Durch neue technologische Fortschritte wie autonomes Fahren können
+Luftschadstoffreduktionen,
 Einsparpotenziale beim Kraftstoffverbrauch,
 schnellerer Durchsatz neuer Technologien
 oder eine Reduktion des Fahrzeugbestandes mit sich bringen.
 
 
-In dieser Arbeit werden Punkte wie
-wie Kraftfahrzeuge aufgebaut sind und welche Teilsysteme sie beinhalten,
-in welche Stufen von Assistenzsystemen unterschieden wird,
-welche Umweltbelastung durch Kraftfahrzeuge entstehen,
+In dieser Arbeit werden Aufbau der Kraftfahrerzeuge und dessen Teilsysteme erklärt, sowie
+Stufen und Merkmale von Assistenzsystemen.
+Unter anderem werden Themengebiete wie Umweltbelastung
 Erwartungen an autonome Kraftfahrzeuge,
-die aktuelle gesetzliche Lage in Deutschland,
-Einsparpotenziale der Luftschadstoffe durch Reduktion des Kraftstoffverbrauchs auf Autobahnen so wie dem städtischen Verkehr,
-Potentiale bei Flottenfahrzeugen,
-positive Auswirkungen auf die Umwelt durch eine Reduktion von Kraftfahrzeugen,
+die aktuelle gesetzliche Lage in Deutschland, Reduktion von Luftschadstoffen und Kraftstoffeinsparung
 untersucht.
 
 
-Das Ziel dieser Arbeit ist es, den Zusammenhang zwischen
+Das Ziel dieser Arbeit ist den Zusammenhang zwischen
 autonomen Kraftfahrzeugen und einer Verringerung von Feinstaub näher zu untersuchen und
 die Hypothese zu verifizieren.
 
-Aufgrund der hohen Aktualität, kommt diese Arbeit zu dem Ergebnis,
-dass ein eindeutiger Trend noch nicht abgebildet werden,
+Aufgrund der hohen Aktualität, kommt diese Arbeit zum Ergebnis,
+dass ein eindeutiger Trend noch nicht abgebildet werden kann,
 da hierfür Daten und Langzeitstudien nicht existieren.
-Vielmehr kann die Summe von mehren neuen Technologien und geänderten Verhaltensmuster eine Trendwende schaffen.
+Vielmehr kann die Summe von neuen Technologien und geänderten Verhaltensmuster eine Trendwende schaffen.
+
 Hierunter könnte Elektromobilität, sowie der Verzicht auf ein eigenes Fahrzeug durch verschiedene
 autonome Mobilitätsdienstleister eine Rolle spielen.
