--- a/template/Fallstudie/Einleitung/Einleitung.tex
+++ b/template/Fallstudie/Einleitung/Einleitung.tex
@@ -65,6 +65,8 @@ Mithilfe von frei zugänglicher Literatur soll diese Frage bearbeitet werden.
 Folgende Hypothese wird untersucht:
 Je mehr Kraftfahrzeuge autonom fahren, desto geringer fällt die Feinstaubbelastung durch Kraftfahrzeuge aus.
 
+\newpage
+
 \section{Aufbau der Arbeit}
 Der Aufbau dieser Arbeit besteht aus mehreren Teilen.
 Zuerst wird ein Überblick über die technischen Teilsysteme von Kraftfahrzeugen gegeben und wie diese
