--- a/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Assistenzsysteme/Assistenzsysteme.tex
@@ -23,6 +23,8 @@ In der Stufe 0 (Keine Automation):
 
 \vspace{0.5cm}
 
+\newpage
+
 In der Stufe 1 (Assistenzsysteme):
 \begin{itemize}
 	\item Assistenzsysteme wie zum Beispiel ein System zur automatischen Geschwindigkeitsregelung oder eine Berganfahrhilfe
@@ -56,7 +58,7 @@ In der Stufe 3 (Bedingte Automatisierung):
 	\item Fahrer muss innerhalb von wenigen Sekunden die Fahraufgabe übernehmen können
 \end{itemize}
 
-\vspace{0.5cm}
+\newpage
 
 In der Stufe 4 (Hochautomatisierung):
 \begin{itemize}
