--- a/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
+++ b/template/Fallstudie/Kraftfahzeuge/Fahrzeugklassen/Fahrzeugklassen.tex
@@ -44,6 +44,7 @@ Kraftfahrzeuge der Klasse M2 haben über die Eigenschaften der Klasse M noch fol
 \end{itemize}
 
 In der Klasse M2 sind Kraftfahrzeuge wie ein Eindecker-Bus bis 5 \ac{t} oder ein Doppeldecker-Bus bis 5 \ac{t} zu finden.
+\newpage
 
 \subsubsection{Klasse M3}
 
@@ -77,6 +78,8 @@ In der Klasse N2 sind Kraftfahrzeuge die Regionalgüter befördern.
 
 Diese Kraftfahrzeuge können die Waren aus einem Zentrallager in die Filialen transportieren
 und sind darauf ausgelegt hunderte Kilometer zurück legen zu können.
+
+\newpage
 
 \subsubsection{Klasse N3}
 Dazu gehören Kraftfahrzeuge zur Güterbeförderung mit einer zulässigen Gesamtmasse von mehr als 12 \ac{t}.
