Update Struktur & Inhalt

--- a/template/03_schluss/schluss.tex
+++ b/template/03_schluss/schluss.tex
@@ -2,9 +2,11 @@
 
 
 \section{Kurzzusammenfassung der Arbeit}
-Im Folgenden soll nun die Arbeit zusammengefasst werden. 
-Blockchain bietet die gleichen Grundbausteine wie die, welche für Big Data Netzwerke benutzt werden. Allerdings bietet es zusätzlich höhere Sicherheit, so wie viele neue innovative Optionen und Möglichkeiten.
+Zusammenfassend lässt sich sagen, dass Blockchain die gleichen Grundbausteine bietet wie die, welche für Big Data Netzwerke benutzt werden.
+Allerding bildet seine einzigartige Strukur die Basis für viele neue Optionen sowie Innovationen.
+Darüber hinaus ist das gesamte Konzept dieses Datenbanksystems darauf ausgerichtet, den Nutzer eine höhere Menge an Sicherheit, Anonymität und Kontrolle anzubieten.
+Alles in allem hat das bereits in den letzten Jahren zu einer stetig steigenden Nachfrage nach auf Blockchain basierenden Netzwerken geführt.
+Im Laufe dieser Arbeit wurde gezeigt, dass anzunehmen ist, dass dieser Trend exponentiell weitersteigen wird.
 
 \section{Ausblick}
-//gesetzgebung
 Spannend wird es zu sehen, was die Weiterentwicklung von Quantencomputern für Hashes und Kryptografie und folglich auch für DLTs bedeuten wird. Aber bis es so weit ist, ist die Blockchain die mit Abstand sicherste Form der Transaktionsdokumentation
