--- a/template/acronyms.tex
+++ b/template/acronyms.tex
@@ -1,2 +1,4 @@
-\newacronym{gcd}{GCD}{Greatest Common Divisor}
-\newacronym{lcm}{LCM}{Least Common Multiple}
+\newacronym{btc}{BTC}{Bitcoin}
+\newacronym{p2p}{P2P}{Peer-to-Peer}
+\newacronym{bat}{BAT}{Basic Attention Token}
+\newacronym{dlt}{DLT}{Distributed Ledger Technology}
