--- a/template/titlepage.tex
+++ b/template/titlepage.tex
@@ -1,9 +1,9 @@
 %variableto fill
-\newcommand{\Thema}{Mein Thema}
+\newcommand{\Thema}{Big Data versus Blockchain \linebreak Wie sehen die Internetdienstleistungen der Zukunft aus?}
 \newcommand{\Name}{Leonardo Ciria Buil}
 \newcommand{\Gutachter}{Dr. Herbert Bauer}
-\newcommand{\Matrikelnummer}{123456}
-\newcommand{\Abgabedatum}{09.01.2022}
+\newcommand{\Matrikelnummer}{604431}
+\newcommand{\Abgabedatum}{10.01.2022}
 
 
 
@@ -31,7 +31,7 @@
 		\vspace{0.2cm}
 		Im Rahmen des Moduls\\
 		\vspace{0.5cm}
-		Arbeitsmethoden und Softwareunterstützung\\
+		Fallstudie / Wissenschaftliches Arbeiten\\
 		\vspace{2cm}
 		Über das Thema\\
 		\vspace{0.5cm}
